test adding paper

--- a/_publications/2019-04-01-paper2.md
+++ b/_publications/2019-04-01-paper2.md
@@ -6,5 +6,5 @@ collection: publications
 date: 2019-04-01
 venue: 'Radioengineering'
 paperurl: 'https://www.radioeng.cz/fulltexts/2019/19\_01\_0331\_0339.pdf'
-citation: 'Tien Ngoc Ha, Ha Hoang Kha, &quot;Harvested Energy and Spectral Efficiency Trade-offs in Multicell MIMO Wireless Networks&quot;, <i>Radioengineering</i>. vol. 28, no. 1, pp. 331-339, Apr. 2019.'
+citation: 'Tien Ngoc Ha, Ha Hoang Kha, &quot;Harvested Energy and Spectral Efficiency Trade-offs in Multicell MIMO Wireless Networks&quot;, <i>Radioengineering</i>, vol. 28, no. 1, pp. 331-339, Apr. 2019.'
 ---
