--- a/_publications/2024-04-01-paper8.md
+++ b/_publications/2024-04-01-paper8.md
@@ -5,6 +5,6 @@ collection: publications
 # excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2024-04-01
 venue: 'IEEE Wireless Communications and Networking Conference'
-paperurl: 'https://arxiv.org/pdf/2310.11043.pdf'
+paperurl: 'https://ieeexplore.ieee.org/document/10570909'
 citation: 'Daniel Romero, Tien Ngoc Ha, Peter Gerstoft, &quot;Spoofing Attack Detection in the Physical Layer with Robustness to User Movement;, <i>IEEE Wireless Communications and Networking Conference</i>, Apr. 2024.'
 ---
