--- a/_publications/2020-06-01-paper4.md
+++ b/_publications/2020-06-01-paper4.md
@@ -6,5 +6,5 @@ collection: publications
 date: 2020-06-01
 venue: 'Telecommunication Systems'
 paperurl: 'https://doi.org/10.1007/s11235-020-00682-w'
-citation: 'Tien Ngoc Ha, Ha Hoang Kha, Hung Quang Ta, &quot;Energy Efficiency Optimization in MIMO Heterogeneous Wireless Powered Communication Networks;, <i>Telecommunication Systems</i>, pp. 97-107, Jun. 2020.'
+citation: 'Tien Ngoc Ha, Ha Hoang Kha, Hung Quang Ta, &quot;Energy Efficiency Optimization in MIMO Heterogeneous Wireless Powered Communication Networks; <i>Telecommunication Systems</i>, pp. 97-107, Jun. 2020.'
 ---
