--- a/_publications/2024-06-01-paper10.md
+++ b/_publications/2024-06-01-paper10.md
@@ -6,5 +6,5 @@ collection: publications
 date: 2024-06-01
 venue: 'IEEE Vehicular Technology Conference (VTC2024-Spring)'
 paperurl: 'https://arxiv.org/abs/2402.16156'
-citation: 'Tien Ngoc Ha, Daniel Romero, Roberto López-Valcarce, &quot;Radio Maps for Beam Alignment in mmWave Communications with Location Uncertainty;, <i>IEEE Vehicular Technology Conference</i>, Jun. 2024.'
+citation: 'Tien Ngoc Ha, Daniel Romero, Roberto López-Valcarce, &quot;Radio Maps for Beam Alignment in mmWave Communications with Location Uncertainty; <i>IEEE Vehicular Technology Conference</i>, Jun. 2024.'
 ---
