--- a/_publications/2023-10-01-paper7.md
+++ b/_publications/2023-10-01-paper7.md
@@ -6,5 +6,5 @@ collection: publications
 date: 2023-10-01
 venue: 'IEEE Conference on Antenna Measurements and Applications'
 paperurl: 'https://uia.brage.unit.no/uia-xmlui/bitstream/handle/11250/3116391/Article.pdf'
-citation: 'Raju Shrestha, Tien Ngoc Ha, Pham Quoc Viet, Daniel Romero, &quot;Radio Map Estimation in the Real-world: Empirical Validation and Analysis;, <i>IEEE Conference on Antenna Measurements and Applications</i>, Oct. 2019.'
+citation: 'Raju Shrestha, Tien Ngoc Ha, Pham Quoc Viet, Daniel Romero, &quot;Radio Map Estimation in the Real-world: Empirical Validation and Analysis; <i>IEEE Conference on Antenna Measurements and Applications</i>, Oct. 2019.'
 ---
