--- a/_publications/2024-05-30-paper12.md
+++ b/_publications/2024-05-30-paper12.md
@@ -4,7 +4,7 @@ collection: publications
 # permalink: /publication/2015-10-01-paper-title-number-3
 # excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2024-05-30
-venue: 'IEEE Vehicular Technology Conference (VTC2024-Spring)'
+venue: 'IEEE Transactions on Wireless Communications'
 paperurl: 'https://arxiv.org/abs/2402.16156'
-citation: 'Daniel Romero, Tien Ngoc Ha, Raju Shrestha, Massimo Franceschetti, &quot;Theoretical Analysis of the Radio Map Estimation Problem;, <i>in IEEE Transactions on Wireless Communications</i>, May 2024.'
+citation: 'Daniel Romero, Tien Ngoc Ha, Raju Shrestha, Massimo Franceschetti, &quot;"Theoretical Analysis of the Radio Map Estimation Problem; <i>in IEEE Transactions on Wireless Communications</i>, May 2024.'
 ---
