--- a/_publications/2018-09-01-paper1.md
+++ b/_publications/2018-09-01-paper1.md
@@ -6,5 +6,5 @@ collection: publications
 date: 2018-09-01
 venue: 'Journal of Science and Technology: Issue on Information and Communications Technology'
 paperurl: 'http://ict.jst.udn.vn/index.php/jst/article/view/62'
-citation: 'Ha Hoang Kha, Tien Ngoc Ha, &quot;An Alternating Optimization Algorithm for Energy Efficiency in Heterogeneous Networks&quot; <i>Journal of Science and Technology: Issue on Information and Communications Technology</i>, vol. 4, no. 1, pp. 1-8, Sep. 2018.'
+citation: 'Ha Hoang Kha, Tien Ngoc Ha, &quot;An Alternating Optimization Algorithm for Energy Efficiency in Heterogeneous Networks&quot; <i>,Journal of Science and Technology: Issue on Information and Communications Technology</i>, vol. 4, no. 1, pp. 1-8, Sep. 2018.'
 ---
