--- a/_publications/2019-10-01-paper6.md
+++ b/_publications/2019-10-01-paper6.md
@@ -6,5 +6,5 @@ collection: publications
 date: 2019-10-01
 venue: 'International Symposium on Electrical and Electronics Engineering (ISEE) Conference'
 paperurl: 'https://ieeexplore.ieee.org/document/8920866'
-citation: 'Viet Quoc Pham, Tien Ngoc Ha, Ha Hoang Kha, Pham Van Quyet, &quot;Energy Efficiency Maximization with Per-Antenna Power Constraints for Heterogeneous Networks; <i>International Symposium on Electrical and Electronics Engineering (ISEE) Conference</i>, Oct. 2019.'
+citation: 'Viet Quoc Pham, Tien Ngoc Ha, Ha Hoang Kha, Pham Van Quyet, &quot;Energy Efficiency Maximization with Per-Antenna Power Constraints for Heterogeneous Networks;, <i>International Symposium on Electrical and Electronics Engineering (ISEE) Conference</i>, Oct. 2019.'
 ---
