--- a/_publications/2020-12-01-paper3.md
+++ b/_publications/2020-12-01-paper3.md
@@ -6,5 +6,5 @@ collection: publications
 date: 2020-12-01
 venue: 'Science \& Technology Development Journal - Engineering and Technology'
 paperurl: 'https://doi.org/10.32508/stdjet.v3i3.685'
-citation: 'Tien Ngoc Ha, Xuan-Xinh Nguyen, Ha Hoang Kha, &quot;Energy Efficiency Maximization for Full Duplex MIMO Cloud Radio Access Networks&quot;, <i>Science & Technology Development Journal - Engineering and Technology</i>, vol. 3, no. 3, pp. 488-499, Dec, 2020.'
+citation: 'Tien Ngoc Ha, Xuan-Xinh Nguyen, Ha Hoang Kha, &quot;Energy Efficiency Maximization for Full Duplex MIMO Cloud Radio Access Networks&quot&quot;, <i>Science & Technology Development Journal - Engineering and Technology</i>, vol. 3, no. 3, pp. 488-499, Dec, 2020.'
 ---
