--- a/_publications/2019-10-01-paper5.md
+++ b/_publications/2019-10-01-paper5.md
@@ -6,5 +6,5 @@ collection: publications
 date: 2019-10-01
 venue: 'International Symposium on Electrical and Electronics Engineering (ISEE) Conference'
 paperurl: 'https://ieeexplore.ieee.org/document/8920929'
-citation: 'Viet Quoc Pham, Tien Ngoc Ha, Ha Hoang Kha, Son Vo Que, &quot;Sum Rate Maximization for Full Duplex Multiuser MIMO Systems by Gradient Projection Approach;, <i>International Symposium on Electrical and Electronics Engineering (ISEE) Conference</i>, Oct. 2019.'
+citation: 'Viet Quoc Pham, Tien Ngoc Ha, Ha Hoang Kha, Son Vo Que, &quot;Sum Rate Maximization for Full Duplex Multiuser MIMO Systems by Gradient Projection Approach&quot;, <i>International Symposium on Electrical and Electronics Engineering (ISEE) Conference</i>, Oct. 2019.'
 ---
