--- a/_publications/2024-05-30-paper12.md
+++ b/_publications/2024-05-30-paper12.md
@@ -6,5 +6,5 @@ collection: publications
 date: 2024-05-30
 venue: 'IEEE Transactions on Wireless Communications'
 paperurl: 'https://arxiv.org/abs/2402.16156'
-citation: 'Daniel Romero, Tien Ngoc Ha, Raju Shrestha, Massimo Franceschetti, &quot;Theoretical Analysis of the Radio Map Estimation Problem; <i>IEEE Transactions on Wireless Communications</i>, May 2024.'
+citation: 'Daniel Romero, Tien Ngoc Ha, Raju Shrestha, Massimo Franceschetti, &quot;Theoretical Analysis of the Radio Map Estimation Problem&quot;, <i>IEEE Transactions on Wireless Communications</i>, May 2024.'
 ---
