--- a/_publications/2024-06-01-paper11.md
+++ b/_publications/2024-06-01-paper11.md
@@ -6,5 +6,5 @@ collection: publications
 date: 2024-06-01
 venue: 'IEEE Vehicular Technology Conference (VTC2024-Spring)'
 paperurl: 'https://arxiv.org/abs/2402.16156'
-citation: 'Daniel Romero, Tien Ngoc Ha, Raju Shrestha, Massimo Franceschetti, &quot;Analytical Performance Bounds for Radio Map Estimation; <i>IEEE Vehicular Technology Conference</i>, Jun. 2024.'
+citation: 'Daniel Romero, Tien Ngoc Ha, Raju Shrestha, Massimo Franceschetti, &quot;Analytical Performance Bounds for Radio Map Estimation&quot;, <i>IEEE Vehicular Technology Conference</i>, Jun. 2024.'
 ---
