--- a/_publications/2024-06-01-paper9.md
+++ b/_publications/2024-06-01-paper9.md
@@ -6,5 +6,5 @@ collection: publications
 date: 2024-06-01
 venue: 'IEEE Vehicular Technology Conference (VTC2024-Spring)'
 paperurl: 'https://arxiv.org/abs/2401.08220'
-citation: 'Tien Ngoc Ha, Daniel Romero, &quot;Spoofing Detection in the Physical Layer with Graph Neural Networks; <i>IEEE Vehicular Technology Conference</i>, Jun. 2024.'
+citation: 'Tien Ngoc Ha, Daniel Romero, &quot;Spoofing Detection in the Physical Layer with Graph Neural Networks&quot;, <i>IEEE Vehicular Technology Conference</i>, Jun. 2024.'
 ---
