--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -1,20 +1,28 @@
 ---
-title: 'Blog Post number 1'
-date: 2012-08-14
-permalink: /posts/2012/08/blog-post-1/
+title: 'ADC and DAC'
+date: 2024-07-18
+permalink: /posts/2024/07/blog-post-1/
 tags:
   - cool posts
   - category1
   - category2
 ---
 
-This is a sample blog post. Lorem ipsum I can't remember the rest of lorem ipsum and don't have an internet connection right now. Testing testing testing this blog post. Blog posts are cool.
+In this blog, we will study analog-to-digital conversion (ADC) and
+digital-to-analog conversion (DAC). Down the road, we will prove the well-known
+Nyquist sampling theorem. 
 
-Headings are cool
+The starting point is a continuous-time signal $x(t)$. An ADC takes $x(t)$ and
+produces a discrete-time signal $x[n]\triangleq x(nT)$, where $T$ is the
+\textit{sampling interval}, also known as \textit{sampling period}. It is also
+common to talk about the \textit{sampling rate}, which is defined as $1/T$ if
+expressed in Hertz and $2\pi/T$ when expressed in radians per second.
+
+<!-- Headings are cool
 ======
 
 You can have many headings
 ======
 
 Aren't headings cool?
-------
+------ -->
