test adding blog

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -14,9 +14,23 @@ Nyquist sampling theorem.
 
 The starting point is a continuous-time signal $x(t)$. An ADC takes $x(t)$ and
 produces a discrete-time signal $x[n]\triangleq x(nT)$, where $T$ is the
-\textit{sampling interval}, also known as \textit{sampling period}. It is also
-common to talk about the \textit{sampling rate}, which is defined as $1/T$ if
+*sampling interval*, also known as *sampling period*. It is also
+common to talk about the *sampling rate*, which is defined as $1/T$ if
 expressed in Hertz and $2\pi/T$ when expressed in radians per second.
+
+Conversely, a DAC takes a sequence $x[n]$ at its input and produces a
+continuous-time waveform $\hat{x}(t)$ at its output. Ideally, if the samples
+$x[n]$ preserve all the information in $x(t)$, the DAC will be able to
+reconstruct $x(t)$, which theoretically can be expressed as $\hat{x}(t)=x(t)$.
+
+Our first goal is to study under which conditions $x(t)$ can be reconstructed
+from $x[n]$.
+
+The notation for Fourier transforms of continuous-time and discrete-time signals
+throughout this problem is respectively
+
+$$Y(\Omega) \triangleq \int_{-\infty}^{\infty} y(t)e^{-j\Omega t}dt, \quad\quad
+    Y(e^{j\omega}) \triangleq \sum_{n=-\infty}^{\infty} y[n]e^{-j\omega n}.$$
 
 <!-- Headings are cool
 ======
