test adding blog

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -3,9 +3,8 @@ title: 'ADC and DAC'
 date: 2024-07-18
 permalink: /posts/2024/07/blog-post-1/
 tags:
-  - cool posts
-  - category1
-  - category2
+  - analog-to-digital conversion (ADC)
+  - digital-to-analog conversion (DAC)
 ---
 
 In this blog, we will study analog-to-digital conversion (ADC) and
@@ -29,21 +28,31 @@ from $x[n]$.
 The notation for Fourier transforms of continuous-time and discrete-time signals
 throughout this problem is respectively
 
-$$Y(\Omega) \triangleq \int_{-\infty}^{\infty} y(t)e^{-j\Omega t}dt, \quad\quad
-    Y(e^{j\omega}) \triangleq \sum_{n=-\infty}^{\infty} y[n]e^{-j\omega n}.$$
+$$
+Y(\Omega) \triangleq \int_{-\infty}^{\infty} y(t)e^{-j\Omega t}dt, \quad\quad
+    Y(e^{j\omega}) \triangleq \sum_{n=-\infty}^{\infty} y[n]e^{-j\omega n}.
+$$
 
 Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
 
 1. The Dirac comb, also known as a train of deltas or train of impulses, is
-          $p(t)=\sum_{n=-\infty}^{\infty} \delta(t-Tn)$. The ADC conversion can
-          be mathematically thought of as a two-step process. First, $x(t)$ is
-          multiplied by a Dirac comb. Let $x_c(t)\triangleq x(t)p(t)$. Then
-          $$x_c(t) & = x(t)p(t) = x(t) \sum_{n=-\infty}^{\infty}\delta(t-Tn)
-          \\
-              & = \sum_{n=-\infty}^{\infty} x(t)\delta(t-Tn) \overset{(a)}{=} \sum_{n=-\infty}^{\infty} x(nT)\delta(t-Tn) \\
-              & = \sum_{n=-\infty}^{\infty} x[n]\delta(t-Tn),$$
-              where $(a)$ follows the sampling property, which is
-          $x(t)\delta(t-t_0)=x(t_0)\delta(t-t_0)$.
+  $p(t)=\sum_{n=-\infty}^{\infty} \delta(t-Tn)$. The ADC conversion can be
+  mathematically thought of as a two-step process. First, $x(t)$ is multiplied
+  by a Dirac comb. Let $x_c(t)\triangleq x(t)p(t)$. Then
+  $$
+  \begin{split}
+  x_c(t) & = x(t)p(t) = x(t) \sum_{n=-\infty}^{\infty}\delta(t-Tn) \\
+      & = \sum_{n=-\infty}^{\infty} x(t)\delta(t-Tn) \overset{(a)}{=} \sum_{n=-\infty}^{\infty} x(nT)\delta(t-Tn) \\
+      & = \sum_{n=-\infty}^{\infty} x[n]\delta(t-Tn),
+  \end{split}
+  $$
+  where $(a)$ follows the sampling property, which is
+  $x(t)\delta(t-t_0)=x(t_0)\delta(t-t_0)$.
+
+
+
+
+
 <!-- Headings are cool
 ======
 
