test adding blog

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -38,7 +38,7 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
 1. The Dirac comb, also known as a train of deltas or train of impulses, is
   $p(t)=\sum_{n=-\infty}^{\infty} \delta(t-Tn)$. The ADC conversion can be
   mathematically thought of as a two-step process. First, $x(t)$ is multiplied
-  by a Dirac comb. Let $x_c(t)\triangleq x(t)p(t)$. Then
+  by a Dirac comb. Let $x_c(t)\triangleq x(t)p(t)$, then we have
   $$
   \begin{split}
   x_c(t) & = x(t)p(t) = x(t) \sum_{n=-\infty}^{\infty}\delta(t-Tn) \\
@@ -46,9 +46,25 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
       & = \sum_{n=-\infty}^{\infty} x[n]\delta(t-Tn),
   \end{split}
   $$
-  
+
   where $(a)$ follows the sampling property, which is
   $x(t)\delta(t-t_0)=x(t_0)\delta(t-t_0)$.
+
+2. The second step involves collecting the amplitudes of the resulting deltas to
+  extract the sequence $x[n]$. Let us now relate the Fourier transform of
+  $x_c(t)$ and that of $x[n]$. 
+  $$
+  \begin{split}
+  X_c(\omega/T) & =\int_{-\infty}^{\infty} x_c(t)e^{-j(\omega/T) t}dt                                     \\
+              & =\int_{-\infty}^{\infty} \sum_{n=-\infty}^{\infty} x[n]\delta(t-Tn)e^{-j(\omega/T) t}dt \\
+              & =\sum_{n=-\infty}^{\infty} x[n]\int_{-\infty}^{\infty} \delta(t-Tn)e^{-j(\omega/T) t}dt \\
+              & \overset{(a)}{=}\sum_{n=-\infty}^{\infty} x[n]e^{-j\omega n} = X(e^{j\omega}),
+  \end{split}
+  $$
+
+  where $(a)$ follows the sampling property of the Dirac delta function, which
+  is $y(t_0)=\int y(t)\delta(t-t_0)dt$, ($y(t)=e^{-j(\omega/T) t}$ and
+  $t_0=Tn$).
 
 
 
