test adding blog

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -40,11 +40,12 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
   mathematically thought of as a two-step process. First, $x(t)$ is multiplied
   by a Dirac comb. Let $x_c(t)\triangleq x(t)p(t)$, then we have
   $$
-  \begin{split}
+  \label{eq:xc}
+  \begin{aligned}
   x_c(t) & = x(t)p(t) = x(t) \sum_{n=-\infty}^{\infty}\delta(t-Tn) \\
       & = \sum_{n=-\infty}^{\infty} x(t)\delta(t-Tn) \overset{(a)}{=} \sum_{n=-\infty}^{\infty} x(nT)\delta(t-Tn) \\
       & = \sum_{n=-\infty}^{\infty} x[n]\delta(t-Tn),
-  \end{split}
+  \end{aligned}
   $$
 
   where $(a)$ follows the sampling property, which is
@@ -54,12 +55,12 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
   extract the sequence $x[n]$. Let us now relate the Fourier transform of
   $x_c(t)$ and that of $x[n]$. 
   $$
-  \begin{split}
+  \begin{aligned}
   X_c(\omega/T) & =\int_{-\infty}^{\infty} x_c(t)e^{-j(\omega/T) t}dt                                     \\
               & =\int_{-\infty}^{\infty} \sum_{n=-\infty}^{\infty} x[n]\delta(t-Tn)e^{-j(\omega/T) t}dt \\
               & =\sum_{n=-\infty}^{\infty} x[n]\int_{-\infty}^{\infty} \delta(t-Tn)e^{-j(\omega/T) t}dt \\
               & \overset{(a)}{=}\sum_{n=-\infty}^{\infty} x[n]e^{-j\omega n} = X(e^{j\omega}),
-  \end{split}
+  \end{aligned}
   $$
 
   where $(a)$ follows the sampling property of the Dirac delta function, which
