test adding blog

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -55,7 +55,7 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
 2. The second step involves collecting the amplitudes of the resulting deltas to
   extract the sequence $x[n]$. Let us now relate the Fourier transform of
   $x_c(t)$ and that of $x[n]$. 
-  
+
   $$
   \begin{aligned}
   X_c(\omega/T) & =\int_{-\infty}^{\infty} x_c(t)e^{-j(\omega/T) t}dt                                     \\
@@ -69,6 +69,45 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
   is $y(t_0)=\int y(t)\delta(t-t_0)dt$, ($y(t)=e^{-j(\omega/T) t}$ and
   $t_0=Tn$).
 
+3. It can be shown that the Fourier transform of $p(t)$ is
+
+  $$
+  P(\Omega) = \frac{2\pi}{T}\sum_{k=-\infty}^{\infty}\delta\left(\Omega-\frac{2\pi}{T} k\right).
+  $$
+
+  We can find $X_c(\omega/T)$ as following:
+
+  $$
+  \begin{aligned}
+  x_c(t) = x(t)p(t) \overset{\mathcal{F}}{\longrightarrow} X_c(\Omega) & \overset{(a)}{=} \frac{1}{2\pi}X(\Omega)*P(\Omega)                                                                    \\
+              & = \frac{1}{2\pi}X(\Omega) * \frac{2\pi}{T}\sum_{k=-\infty}^{\infty}\delta\left(\Omega-\frac{2\pi}{T} k\right)         \\
+              & = \frac{1}{T}\sum_{k=-\infty}^{\infty}X(\Omega) * \delta\left(\Omega-\frac{2\pi}{T} k\right)                          \\
+              & = \frac{1}{T}\sum_{k=-\infty}^{\infty}\int_{-\infty}^{\infty}X(\mu)\delta\left(\Omega-\frac{2\pi}{T} k-\mu\right)d\mu \\
+              & \overset{(b)}{=} \frac{1}{T}\sum_{k=-\infty}^{\infty}X\left(\Omega-\frac{2\pi}{T}k\right),
+  \end{aligned}
+  $$
+
+  where $(a)$ follows the property of Fourier transform and $(b)$ follows the
+  sampling property of the Dirac delta function.
+
+Observe that the two last parts have established the relation between
+the Fourier transform of $x(t)$ and that $x[n]\triangleq x(nT)$: 
+
+$$
+\label{eq:relation}
+X(e^{j\omega}) = \frac{1}{T}\sum_{k=-\infty}^{\infty}X\left(\frac{\omega-2\pi k}{T}\right).
+$$
+
+4. As an example to gain insight, suppose that
+
+  $$
+  X(\Omega)=\begin{cases}
+                0,                                & \text{if }\Omega<-\Omega_0,         \\
+                \frac{\Omega_0+\Omega}{\Omega_0}, & \text{if } -\Omega_0\leq\Omega < 0, \\
+                \frac{\Omega_0-\Omega}{\Omega_0}, & \text{if } 0\leq\Omega < \Omega_0,  \\
+                0,                                & \text{if }\Omega_0\leq\Omega,
+            \end{cases}
+  $$
 
 
 
