test adding blog

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -35,7 +35,7 @@ $$
 
 Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
 
-1. The Dirac comb, also known as a train of deltas or train of impulses, is
+1/ The Dirac comb, also known as a train of deltas or train of impulses, is
   $p(t)=\sum_{n=-\infty}^{\infty} \delta(t-Tn)$. The ADC conversion can be
   mathematically thought of as a two-step process. First, $x(t)$ is multiplied
   by a Dirac comb. Let $x_c(t)\triangleq x(t)p(t)$, then we have
@@ -52,13 +52,13 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
   where $(a)$ follows the sampling property, which is
   $x(t)\delta(t-t_0)=x(t_0)\delta(t-t_0)$.
 
-2. The second step involves collecting the amplitudes of the resulting deltas to
+2/ The second step involves collecting the amplitudes of the resulting deltas to
   extract the sequence $x[n]$. Let us now relate the Fourier transform of
   $x_c(t)$ and that of $x[n]$. 
 
   $$
   \begin{aligned}
-  X_c(\omega/T) & =\int_{-\infty}^{\infty} x_c(t)e^{-j(\omega/T) t}dt                                     \\
+  X_c(\omega/T) & =\int_{-\infty}^{\infty} x_c(t)e^{-j(\omega/T) t}dt                                   \\
               & =\int_{-\infty}^{\infty} \sum_{n=-\infty}^{\infty} x[n]\delta(t-Tn)e^{-j(\omega/T) t}dt \\
               & =\sum_{n=-\infty}^{\infty} x[n]\int_{-\infty}^{\infty} \delta(t-Tn)e^{-j(\omega/T) t}dt \\
               & \overset{(a)}{=}\sum_{n=-\infty}^{\infty} x[n]e^{-j\omega n} = X(e^{j\omega}),
@@ -69,7 +69,7 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
   is $y(t_0)=\int y(t)\delta(t-t_0)dt$, ($y(t)=e^{-j(\omega/T) t}$ and
   $t_0=Tn$).
 
-3. It can be shown that the Fourier transform of $p(t)$ is
+3/ It can be shown that the Fourier transform of $p(t)$ is
 
   $$
   P(\Omega) = \frac{2\pi}{T}\sum_{k=-\infty}^{\infty}\delta\left(\Omega-\frac{2\pi}{T} k\right).
@@ -79,7 +79,7 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
 
   $$
   \begin{aligned}
-  x_c(t) = x(t)p(t) \overset{\mathcal{F}}{\longrightarrow} X_c(\Omega) & \overset{(a)}{=} \frac{1}{2\pi}X(\Omega)*P(\Omega)                                                                    \\
+  x_c(t) = x(t)p(t) \overset{\mathcal{F}}{\longrightarrow} X_c(\Omega) & \overset{(a)}{=} \frac{1}{2\pi}X(\Omega)*P(\Omega)           \\
               & = \frac{1}{2\pi}X(\Omega) * \frac{2\pi}{T}\sum_{k=-\infty}^{\infty}\delta\left(\Omega-\frac{2\pi}{T} k\right)         \\
               & = \frac{1}{T}\sum_{k=-\infty}^{\infty}X(\Omega) * \delta\left(\Omega-\frac{2\pi}{T} k\right)                          \\
               & = \frac{1}{T}\sum_{k=-\infty}^{\infty}\int_{-\infty}^{\infty}X(\mu)\delta\left(\Omega-\frac{2\pi}{T} k-\mu\right)d\mu \\
@@ -98,7 +98,7 @@ $$
 X(e^{j\omega}) = \frac{1}{T}\sum_{k=-\infty}^{\infty}X\left(\frac{\omega-2\pi k}{T}\right).
 $$
 
-4. As an example to gain insight, suppose that
+4/ As an example to gain insight, suppose that
 
   $$
   X(\Omega)=\begin{cases}
