test adding blog

--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -109,9 +109,32 @@ $$
             \end{cases}
   $$
 
+  where $\Omega_0$ is a positive constant. Plot $X(\Omega)$, $X_c(\Omega)$, and
+  $X(e^{j\omega})$ for the cases where $\Omega_0=(1/3)2\pi/T$ and
+  $\Omega_0=(2/3)2\pi/T$.
+
+So far, we have established the relation between the Fourier transform
+of $x(t)$ and that of $x[n]$. Observe that a continuous-time frequency
+$\Omega$ corresponds to a discrete-time frequency $\omega/T$. In other
+words:
+
+$$
+\omega = \Omega T.
+$$
+
+We also observed that when the bandwidth of $x(t)$ is greater than half the
+sampling rate $(1/2)2\pi/T$, this Fourier transform becomes distorted. Next, we
+will proceed to study digital-to-analog conversion.
+
+5/ The DAC conversion can also be mathematically understood in 2 steps. The
+  first is to form $x_c(t)$ from the samples $x[n]$ by using \eqref{eq:xc}. The
+  second step involves applying an ideal low-pass filter $g(t)$ with frequency
+  response
 
 
 
+
+  
 <!-- Headings are cool
 ======
 
