--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -29,8 +29,10 @@ The notation for Fourier transforms of continuous-time and discrete-time signals
 throughout this problem is respectively
 
 $$
+\begin{align}
 Y(\Omega) \triangleq \int_{-\infty}^{\infty} y(t)e^{-j\Omega t}dt, \quad\quad
     Y(e^{j\omega}) \triangleq \sum_{n=-\infty}^{\infty} y[n]e^{-j\omega n}.
+\end{align}
 $$
 
 Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
@@ -40,13 +42,15 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
   mathematically thought of as a two-step process. First, $x(t)$ is multiplied
   by a Dirac comb. Let $x_c(t)\triangleq x(t)p(t)$, then we have
 
+  <a id="eq:xc"></a>
   $$
-  \label{eq:xc}
-  \begin{aligned}
-  x_c(t) & = x(t)p(t) = x(t) \sum_{n=-\infty}^{\infty}\delta(t-Tn) \\
-      & = \sum_{n=-\infty}^{\infty} x(t)\delta(t-Tn) \overset{(a)}{=} \sum_{n=-\infty}^{\infty} x(nT)\delta(t-Tn) \\
-      & = \sum_{n=-\infty}^{\infty} x[n]\delta(t-Tn),
-  \end{aligned}
+  \begin{align}
+    \begin{aligned}
+      x_c(t) & = x(t)p(t) = x(t) \sum_{n=-\infty}^{\infty}\delta(t-Tn) \\
+          & = \sum_{n=-\infty}^{\infty} x(t)\delta(t-Tn) \overset{(a)}{=} \sum_{n=-\infty}^{\infty} x(nT)\delta(t-Tn) \\
+          & = \sum_{n=-\infty}^{\infty} x[n]\delta(t-Tn),
+    \end{aligned}
+  \end{align}
   $$
 
   where $(a)$ follows the sampling property, which is
@@ -57,12 +61,14 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
   $x_c(t)$ and that of $x[n]$. 
 
   $$
-  \begin{aligned}
-  X_c(\omega/T) & =\int_{-\infty}^{\infty} x_c(t)e^{-j(\omega/T) t}dt                                   \\
-              & =\int_{-\infty}^{\infty} \sum_{n=-\infty}^{\infty} x[n]\delta(t-Tn)e^{-j(\omega/T) t}dt \\
-              & =\sum_{n=-\infty}^{\infty} x[n]\int_{-\infty}^{\infty} \delta(t-Tn)e^{-j(\omega/T) t}dt \\
-              & \overset{(a)}{=}\sum_{n=-\infty}^{\infty} x[n]e^{-j\omega n} = X(e^{j\omega}),
-  \end{aligned}
+  \begin{align}
+    \begin{aligned}
+      X_c(\omega/T) & =\int_{-\infty}^{\infty} x_c(t)e^{-j(\omega/T) t}dt                                   \\
+                  & =\int_{-\infty}^{\infty} \sum_{n=-\infty}^{\infty} x[n]\delta(t-Tn)e^{-j(\omega/T) t}dt \\
+                  & =\sum_{n=-\infty}^{\infty} x[n]\int_{-\infty}^{\infty} \delta(t-Tn)e^{-j(\omega/T) t}dt \\
+                  & \overset{(a)}{=}\sum_{n=-\infty}^{\infty} x[n]e^{-j\omega n} = X(e^{j\omega}),
+    \end{aligned}
+  \end{align}
   $$
 
   where $(a)$ follows the sampling property of the Dirac delta function, which
@@ -72,19 +78,23 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
 3/ It can be shown that the Fourier transform of $p(t)$ is
 
   $$
-  P(\Omega) = \frac{2\pi}{T}\sum_{k=-\infty}^{\infty}\delta\left(\Omega-\frac{2\pi}{T} k\right).
+  \begin{align}
+    P(\Omega) = \frac{2\pi}{T}\sum_{k=-\infty}^{\infty}\delta\left(\Omega-\frac{2\pi}{T} k\right).
+  \end{align}
   $$
 
   We can find $X_c(\omega/T)$ as following:
 
   $$
-  \begin{aligned}
-  x_c(t) = x(t)p(t) \overset{\mathcal{F}}{\longrightarrow} X_c(\Omega) & \overset{(a)}{=} \frac{1}{2\pi}X(\Omega)*P(\Omega)           \\
-              & = \frac{1}{2\pi}X(\Omega) * \frac{2\pi}{T}\sum_{k=-\infty}^{\infty}\delta\left(\Omega-\frac{2\pi}{T} k\right)         \\
-              & = \frac{1}{T}\sum_{k=-\infty}^{\infty}X(\Omega) * \delta\left(\Omega-\frac{2\pi}{T} k\right)                          \\
-              & = \frac{1}{T}\sum_{k=-\infty}^{\infty}\int_{-\infty}^{\infty}X(\mu)\delta\left(\Omega-\frac{2\pi}{T} k-\mu\right)d\mu \\
-              & \overset{(b)}{=} \frac{1}{T}\sum_{k=-\infty}^{\infty}X\left(\Omega-\frac{2\pi}{T}k\right),
-  \end{aligned}
+  \begin{align}
+    \begin{aligned}
+      x_c(t) = x(t)p(t) \overset{\mathcal{F}}{\longrightarrow} X_c(\Omega) & \overset{(a)}{=} \frac{1}{2\pi}X(\Omega)*P(\Omega)           \\
+                  & = \frac{1}{2\pi}X(\Omega) * \frac{2\pi}{T}\sum_{k=-\infty}^{\infty}\delta\left(\Omega-\frac{2\pi}{T} k\right)         \\
+                  & = \frac{1}{T}\sum_{k=-\infty}^{\infty}X(\Omega) * \delta\left(\Omega-\frac{2\pi}{T} k\right)                          \\
+                  & = \frac{1}{T}\sum_{k=-\infty}^{\infty}\int_{-\infty}^{\infty}X(\mu)\delta\left(\Omega-\frac{2\pi}{T} k-\mu\right)d\mu \\
+                  & \overset{(b)}{=} \frac{1}{T}\sum_{k=-\infty}^{\infty}X\left(\Omega-\frac{2\pi}{T}k\right),
+    \end{aligned}
+  \end{align}
   $$
 
   where $(a)$ follows the property of Fourier transform and $(b)$ follows the
@@ -93,9 +103,11 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
 Observe that the two last parts have established the relation between
 the Fourier transform of $x(t)$ and that $x[n]\triangleq x(nT)$: 
 
+<a id="eq:relation"></a>
 $$
-\label{eq:relation}
-X(e^{j\omega}) = \frac{1}{T}\sum_{k=-\infty}^{\infty}X\left(\frac{\omega-2\pi k}{T}\right).
+\begin{align}
+  X(e^{j\omega}) = \frac{1}{T}\sum_{k=-\infty}^{\infty}X\left(\frac{\omega-2\pi k}{T}\right).
+\end{align}
 $$
 
 4/ As an example to gain insight, suppose that
@@ -119,7 +131,9 @@ $\Omega$ corresponds to a discrete-time frequency $\omega/T$. In other
 words:
 
 $$
-\omega = \Omega T.
+\begin{align}
+  \omega = \Omega T.
+\end{align}
 $$
 
 We also observed that when the bandwidth of $x(t)$ is greater than half the
@@ -127,14 +141,74 @@ sampling rate $(1/2)2\pi/T$, this Fourier transform becomes distorted. Next, we
 will proceed to study digital-to-analog conversion.
 
 5/ The DAC conversion can also be mathematically understood in 2 steps. The
-  first is to form $x_c(t)$ from the samples $x[n]$ by using \eqref{eq:xc}. The
+  first is to form $x_c(t)$ from the samples $x[n]$ by using [(2)](#eq:xc). The
   second step involves applying an ideal low-pass filter $g(t)$ with frequency
   response
 
+  $$
+  \begin{align}
+    G(\Omega)\triangleq\begin{cases}
+                            T, & \text{if }|\Omega|<\frac{\pi}{T}, \\
+                            0, & \text{otherwise}.
+                        \end{cases}
+  \end{align}
+  $$
 
+  to $x_c(t)$. The continuous-time signal of the above filter is given as
 
+  <a id="eq:filter_in_time"></a>
+  $$
+  \begin{align}
+    g(t) & =\mathcal{F}^{-1}\{G(\Omega)\}=\frac{1}{2\pi}\int_{-\pi/T}^{\pi/T}Te^{j\Omega t}d\Omega =\left[\frac{T}{2\pi}\frac{1}{jt}e^{j\Omega t}\right]_{-\pi/T}^{\pi/T} =\text{sinc}\left(\frac{t}{T}\right).
+  \end{align}
+  $$
 
+  Therefore,
+
+  $$
+  \begin{align}
+    \begin{aligned}
+      \hat{x}(t) & = x_c(t)*g(t) = \sum_{n=-\infty}^{\infty} x[n]\delta(t-nT)*g(t) = \sum_{n=-\infty}^{\infty} x[n]\delta(t-nT)*\text{sinc}\left(\frac{t}{T}\right) \\
+      & = \sum_{n=-\infty}^{\infty} x[n] \int_{-\infty}^{\infty} \text{sinc}\left(\frac{\tau}{T}\right)\delta(t-nT-\tau)d\tau                            \\
+      & \overset{(a)}{=} \sum_{n=-\infty}^{\infty} x[n] \text{sinc}\left(\frac{t-nT}{T}\right),
+    \end{aligned}
+  \end{align}
+  $$
+
+  where $(a)$ follows the definition of Dirac delta.
+
+6/ We say that $x(t)$ is reconstructed from $x[n]$ if $\hat{x}(t)=x(t)$. This is
+  the case if $X(\Omega)=0$ for $\Omega\notin (-\pi/T,\pi/T)$, that is, if the
+  sampling rate is at least twice the highest frequency (in absolute value) in
+  $x(t)$ (Nyquist's sampling theorem). 
   
+  Indeed, since $|\Omega-\frac{2\pi}{T}k|\geq|\frac{2\pi}{T}k|-|\Omega|>\pi/T$
+  for $k\neq 0$. If $X(\Omega)=0$ for $\Omega\notin (-\pi/T,\pi/T)$, then
+  $\sum_{k=-\infty}^{\infty}X\left(\Omega-\frac{2\pi}{T}k\right)=X(\Omega)$. By
+  pluging $\omega=\Omega T$ to [(6)](#eq:relation), we have
+
+  <a id="eq:relation2"></a>
+  $$
+  \begin{align}
+      X(e^{j\Omega T}) = \frac{1}{T}\sum_{k=-\infty}^{\infty}X\left(\Omega-\frac{2\pi k}{T}\right) = \frac{1}{T}X(\Omega), \forall \Omega\in (-\pi/T,\pi/T).
+  \end{align}
+  $$
+
+  Therefore, $X(\Omega)=TX(e^{j\Omega T})$, $\forall \Omega\in (-\pi/T,\pi/T)$.
+  
+  On the order hand,
+
+  $$
+  \begin{align}
+    \begin{aligned}
+      x(t) & =\mathcal{F}^{-1}\{X(\Omega)\}=T\mathcal{F}^{-1}\{X(e^{j\Omega T})\}=\frac{T}{2\pi}\int_{-\pi/T}^{\pi/T}X(e^{j\Omega T})e^{j\Omega t}d\Omega                                                   \\
+      & =\frac{T}{2\pi}\int_{-\pi/T}^{\pi/T}\sum_{n=-\infty}^{\infty}x[n]e^{-j\Omega nT}e^{j\Omega t}d\Omega=\sum_{n=-\infty}^{\infty}x[n]\int_{-\pi/T}^{\pi/T}\frac{T}{2\pi}e^{j\Omega (t-nT)}d\Omega \\
+      & =\sum_{n=-\infty}^{\infty}x[n]\left[\frac{T}{2\pi}\frac{1}{j(t-nT)}e^{j\Omega (t-nT)}\right]_{-\pi/T}^{\pi/T}=\sum_{n=-\infty}^{\infty}x[n]\text{sinc}\left(\frac{t-nT}{T}\right)                    \\
+      & =\hat{x}(t).
+    \end{aligned}
+  \end{align}
+  $$
+
 <!-- Headings are cool
 ======
 
