--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -37,7 +37,7 @@ $$
 
 Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
 
-1/ The Dirac comb, also known as a train of deltas or train of impulses, is
+1. The Dirac comb, also known as a train of deltas or train of impulses, is
   $p(t)=\sum_{n=-\infty}^{\infty} \delta(t-Tn)$. The ADC conversion can be
   mathematically thought of as a two-step process. First, $x(t)$ is multiplied
   by a Dirac comb. Let $x_c(t)\triangleq x(t)p(t)$, then we have
@@ -56,7 +56,7 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
   where $(a)$ follows the sampling property, which is
   $x(t)\delta(t-t_0)=x(t_0)\delta(t-t_0)$.
 
-2/ The second step involves collecting the amplitudes of the resulting deltas to
+2. The second step involves collecting the amplitudes of the resulting deltas to
   extract the sequence $x[n]$. Let us now relate the Fourier transform of
   $x_c(t)$ and that of $x[n]$. 
 
@@ -75,7 +75,7 @@ Note the usage of different letters, namely $\Omega$ and $\omega$, in each case.
   is $y(t_0)=\int y(t)\delta(t-t_0)dt$, ($y(t)=e^{-j(\omega/T) t}$ and
   $t_0=Tn$).
 
-3/ It can be shown that the Fourier transform of $p(t)$ is
+3. It can be shown that the Fourier transform of $p(t)$ is
 
   $$
   \begin{align}
@@ -110,7 +110,7 @@ $$
 \end{align}
 $$
 
-4/ As an example to gain insight, suppose that
+<!-- 4. As an example to gain insight, suppose that
 
   $$
   X(\Omega)=\begin{cases}
@@ -123,7 +123,7 @@ $$
 
   where $\Omega_0$ is a positive constant. Plot $X(\Omega)$, $X_c(\Omega)$, and
   $X(e^{j\omega})$ for the cases where $\Omega_0=(1/3)2\pi/T$ and
-  $\Omega_0=(2/3)2\pi/T$.
+  $\Omega_0=(2/3)2\pi/T$. -->
 
 So far, we have established the relation between the Fourier transform
 of $x(t)$ and that of $x[n]$. Observe that a continuous-time frequency
@@ -140,7 +140,7 @@ We also observed that when the bandwidth of $x(t)$ is greater than half the
 sampling rate $(1/2)2\pi/T$, this Fourier transform becomes distorted. Next, we
 will proceed to study digital-to-analog conversion.
 
-5/ The DAC conversion can also be mathematically understood in 2 steps. The
+4. The DAC conversion can also be mathematically understood in 2 steps. The
   first is to form $x_c(t)$ from the samples $x[n]$ by using [(2)](#eq:xc). The
   second step involves applying an ideal low-pass filter $g(t)$ with frequency
   response
@@ -177,7 +177,7 @@ will proceed to study digital-to-analog conversion.
 
   where $(a)$ follows the definition of Dirac delta.
 
-6/ We say that $x(t)$ is reconstructed from $x[n]$ if $\hat{x}(t)=x(t)$. This is
+5. We say that $x(t)$ is reconstructed from $x[n]$ if $\hat{x}(t)=x(t)$. This is
   the case if $X(\Omega)=0$ for $\Omega\notin (-\pi/T,\pi/T)$, that is, if the
   sampling rate is at least twice the highest frequency (in absolute value) in
   $x(t)$ (Nyquist's sampling theorem). 
