--- a/_posts/2012-08-14-blog-post-1.md
+++ b/_posts/2012-08-14-blog-post-1.md
@@ -168,7 +168,8 @@ will proceed to study digital-to-analog conversion.
   $$
   \begin{align}
     \begin{aligned}
-      \hat{x}(t) & = x_c(t)*g(t) = \sum_{n=-\infty}^{\infty} x[n]\delta(t-nT)*g(t) = \sum_{n=-\infty}^{\infty} x[n]\delta(t-nT)*\text{sinc}\left(\frac{t}{T}\right) \\
+      \hat{x}(t) & = x_c(t)*g(t) = \sum_{n=-\infty}^{\infty} x[n]\delta(t-nT)*g(t)\\
+      & = \sum_{n=-\infty}^{\infty} x[n]\delta(t-nT)*\text{sinc}\left(\frac{t}{T}\right) \\
       & = \sum_{n=-\infty}^{\infty} x[n] \int_{-\infty}^{\infty} \text{sinc}\left(\frac{\tau}{T}\right)\delta(t-nT-\tau)d\tau                            \\
       & \overset{(a)}{=} \sum_{n=-\infty}^{\infty} x[n] \text{sinc}\left(\frac{t-nT}{T}\right),
     \end{aligned}
