--- a/_publications/2019-04-01-paper2.md
+++ b/_publications/2019-04-01-paper2.md
@@ -1,6 +1,6 @@
 ---
 title: "Harvested Energy and Spectral Efficiency Trade-offs in Multicell MIMO Wireless Networks"
-collection: publications
+collection: Journal papers
 # permalink: /publication/2010-10-01-paper-title-number-2
 # excerpt: 'This paper is about the number 2. The number 3 is left for future work.'
 date: 2019-04-01
