--- a/_publications/2019-10-01-paper6.md
+++ b/_publications/2019-10-01-paper6.md
@@ -1,6 +1,6 @@
 ---
 title: "Energy Efficiency Maximization with Per-Antenna Power Constraints for Heterogeneous Networks"
-collection: publications
+collection: Conference papers
 # permalink: /publication/2015-10-01-paper-title-number-3
 # excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2019-10-01
