--- a/_publications/2018-09-01-paper1.md
+++ b/_publications/2018-09-01-paper1.md
@@ -1,6 +1,6 @@
 ---
 title: "An Alternating Optimization Algorithm for Energy Efficiency in Heterogeneous Networks"
-collection: publications
+collection: Journal papers
 # permalink: /publication/2018-09-01-paper-title-number-1
 # excerpt: 'This paper is about the number 1. The number 2 is left for future work.'
 date: 2018-09-01
