--- a/_publications/2020-12-01-paper3.md
+++ b/_publications/2020-12-01-paper3.md
@@ -1,6 +1,6 @@
 ---
 title: "Energy Efficiency Maximization for Full Duplex MIMO Cloud Radio Access Networks"
-collection: publications
+collection: Journal papers
 # permalink: /publication/2015-10-01-paper-title-number-3
 # excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2020-12-01
