--- a/_publications/2023-10-01-paper7.md
+++ b/_publications/2023-10-01-paper7.md
@@ -1,6 +1,6 @@
 ---
 title: "Radio Map Estimation in the Real-world: Empirical Validation and Analysis"
-collection: Conference papers
+collection: Publications
 # permalink: /publication/2015-10-01-paper-title-number-3
 # excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2023-10-01
