--- a/_publications/2024-06-01-paper11.md
+++ b/_publications/2024-06-01-paper11.md
@@ -1,6 +1,6 @@
 ---
 title: "Analytical Performance Bounds for Radio Map Estimation"
-collection: Conference papers
+collection: Publications
 # permalink: /publication/2015-10-01-paper-title-number-3
 # excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2024-06-01
