--- a/_publications/2019-10-01-paper5.md
+++ b/_publications/2019-10-01-paper5.md
@@ -1,6 +1,6 @@
 ---
 title: "Sum Rate Maximization for Full Duplex Multiuser MIMO Systems by Gradient Projection Approach"
-collection: Publications
+collection: publications
 # permalink: /publication/2015-10-01-paper-title-number-3
 # excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2019-10-01
