--- a/_publications/2020-06-01-paper4.md
+++ b/_publications/2020-06-01-paper4.md
@@ -1,6 +1,6 @@
 ---
 title: "Energy Efficiency Optimization in MIMO Heterogeneous Wireless Powered Communication Networks"
-collection: Publications
+collection: publications
 # permalink: /publication/2015-10-01-paper-title-number-3
 # excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2020-06-01
