--- a/_publications/2024-04-01-paper8.md
+++ b/_publications/2024-04-01-paper8.md
@@ -1,6 +1,6 @@
 ---
 title: "Spoofing Attack Detection in the Physical Layer with Robustness to User Movement"
-collection: Publications
+collection: publications
 # permalink: /publication/2015-10-01-paper-title-number-3
 # excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2024-04-01
