--- a/_publications/2024-06-01-paper9.md
+++ b/_publications/2024-06-01-paper9.md
@@ -1,6 +1,6 @@
 ---
 title: "Spoofing Detection in the Physical Layer with Graph Neural Networks"
-collection: Publications
+collection: publications
 # permalink: /publication/2015-10-01-paper-title-number-3
 # excerpt: 'This paper is about the number 3. The number 4 is left for future work.'
 date: 2024-06-01
